Fix header button visibility on mobile

--- a/karagoz-matbaa/src/components/Header.module.css
+++ b/karagoz-matbaa/src/components/Header.module.css
@@ -200,7 +200,7 @@
     display: block;
   }
 
-  .actions .btn {
+  .actions :global(.btn) {
     display: none;
   }
 
